method toList